Fix small screen alignment issues

--- a/apps/full-site-editing/full-site-editing-plugin/starter-page-templates/page-template-modal/styles/starter-page-templates-editor.scss
+++ b/apps/full-site-editing/full-site-editing-plugin/starter-page-templates/page-template-modal/styles/starter-page-templates-editor.scss
@@ -75,7 +75,6 @@ body.admin-bar:not( .is-fullscreen-mode ) .page-template-modal-screen-overlay {
 
 .page-template-modal__inner {
 	position: relative;
-	max-width: 720px;
 	margin: 0 auto;
 	padding: 0;
 
@@ -246,6 +245,7 @@ body.admin-bar:not( .is-fullscreen-mode ) .page-template-modal-screen-overlay {
 	border-radius: 6px;
 	overflow-x: hidden;
 	overflow-y: auto;
+	max-height: 80vh; // avoid overflow off bottom of screen if no of thumbs is large
 
 	.edit-post-visual-editor {
 		margin-top: 20px;
